fix dark mode

--- a/style.css
+++ b/style.css
@@ -1,19 +1,15 @@
 :root {
     --main-bg-color: white;
     --main-text-color: black;
+    --footer-bg-color: darkgray
+    --visited-color: purple
 }
 
 @media (prefers-color-scheme: dark) {
     --main-bg-color: black;
     --main-text-color: white;
-    
-    footer {
-        background-color: rgb(30,30,30)
-    }
-    
-    a:visited {
-        color:blueviolet;
-    }
+    --footer-bg-color: rgb(30,30,30)
+    --visited-color: blueviolet
 }
 
 
@@ -31,7 +27,7 @@ body {
 footer {
     text-align: center;
     padding: 5px;
-    background-color: darkgray;
+    background-color: var(--footer-bg-color);
 }
 
 #title {
